Added match flag on agent vouchers

--- a/src/app/pages/activities/modals/scan-boarding-pass/scan-boarding-pass.component.html
+++ b/src/app/pages/activities/modals/scan-boarding-pass/scan-boarding-pass.component.html
@@ -4,7 +4,7 @@
             <div class="col-md-6">
                 <!-- <input class="form-control" [(ngModel)]="qrResultString"  type="text"> -->
             </div>
-            <h4>Scan The Barcode Using The Barcode Scanner</h4>
+            <h4>Scan QR Code Using QR Code Scanner</h4>
 
         </div>
     </div>
@@ -13,7 +13,7 @@
             <div class="col-md-6">
                 <!-- <input class="form-control" [(ngModel)]="qrResultString"  type="text"> -->
             </div>
-            <h4>Scan The Boarding Pass Using The Barcode Scanner</h4>
+            <h4>Scan Boarding Pass Using QR Code Scanner</h4>
 
         </div>
     </div>
