--- a/src/app/pages/home/dashboard/dashboard.component.html
+++ b/src/app/pages/home/dashboard/dashboard.component.html
@@ -110,11 +110,11 @@
     </div>
     <div class="row text-center d-md-none" style="padding: 10px;">
         <div class="col">
-            <p>Scan the barcode and view the guest details on your desktop browser</p>
+            <p>Scan the QR Code and view the guest details on your desktop browser</p>
         </div>
     </div>
     <div class="row text-center" style="padding: 10px;">
-        <div class="col"><button class="btn btn-success btn-sm" type="button" (click)="scanBoardingPass()">Scan Barcode</button></div>
+        <div class="col"><button class="btn btn-success btn-sm" type="button" (click)="scanBoardingPass()">Scan QR Code</button></div>
     </div>
     <div class="row  d-sm-block">
         <div class="col-md-12">
