--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -30,7 +30,7 @@
                 </li>
                 <li *ngIf="is_agent_admin_view " class="nav-item" role="presentation">
                     <a class="nav-link" [routerLink]="[{ outlets: { 'home_view': ['agent-users']}}]">
-                        <i class="fas fa-tachometer-alt"></i><span>Users</span>
+                        <i class="fas fa-tachometer-alt"></i><span>Agents</span>
                     </a>
                 </li>
                 <li *ngIf="is_admin_view " class="nav-item" role="presentation">
