--- a/src/app/pages/activities/components/agents-list/agents-list.component.html
+++ b/src/app/pages/activities/components/agents-list/agents-list.component.html
@@ -14,7 +14,7 @@
                     <thead>
                         <tr>
                             <th>ID</th>
-                            <th class="text-center">Agent Name</th>
+                            <th class="text-center">Agency Name</th>
                             <th></th>
                         </tr>
                     </thead>
@@ -26,7 +26,7 @@
                             </td>
                             <td>
                                 <button class="btn btn-primary btn-block" type="button" (click)="editAgent(agent)" >Edit</button>
-                                <button class="btn btn-info btn-block" type="button" (click)="addAgentUser(agent)" >Add Admin User</button>
+                                <button class="btn btn-info btn-block" type="button" (click)="addAgentUser(agent)" >Add Agent</button>
                                 <!-- <button class="btn btn-danger btn-block" type="button" (click)="deleteAgent(agent.id , agent.full_name)" >Delete</button>                                       -->
                             </td>
                         </tr>
