Added match flag on agent vouchers

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -27,7 +27,7 @@
                                     </div>
 
 
-                                    <button *ngIf="login_disabled" class="btn btn-primary btn-user btn-block" (click)="initiateLogIn()">
+                                    <button *ngIf="!login_disabled" class="btn btn-primary btn-user btn-block" (click)="initiateLogIn()">
                                             Log In
                                         </button>
                                     <hr>
