--- a/src/app/pages/activities/components/bookings-report/bookings-report.component.html
+++ b/src/app/pages/activities/components/bookings-report/bookings-report.component.html
@@ -170,7 +170,7 @@
 
             <!-- <div class=" mt-2"> -->
             <div class="table-responsive">
-                <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table row-border">
+                <table id="htmlData" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table row-border">
                     <thead>
                         <tr>
                             <th>ID</th>
