--- a/src/app/pages/agent-users/agent-users.component.html
+++ b/src/app/pages/agent-users/agent-users.component.html
@@ -5,38 +5,37 @@
             <p class="text-primary m-0 font-weight-bold">Agents</p>
         </div>
         <div class="card-body">
-         
+
             <!-- <div class=" mt-2"> -->
-                <div class="row text-center"  style="padding: 10px;">
-                    <div class="col"><button class="btn btn-primary btn-sm" type="button" (click)="addAgentUser()">Add New Agent</button></div>
-                </div>
-                <div class="table-responsive">
-                    <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table row-border">
-                        <thead>
-                            <tr>
-                                <th>ID</th>
-                                <th class="text-center">Names</th>
-                                <th class="text-center">Email</th>
-                                <th class="text-center">Admin Agent</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let user of users">
-                                <td class="text-center">{{user.user.id}}</td>
-                                <td class="text-center">{{user.user.name}}</td>
-                                <td class="text-center">{{user.user.email}}</td>
-                                <td class="text-center">
-                                    <input type="checkbox" id="vehicle1" name="vehicle1" (click)="toggleAdminUser(user.user.id)" [checked]="user.is_admin == 1">
-                                </td>
-                                <td>
-                                    <button class="btn btn-danger btn-sm btn-block" type="button" (click)="deleteAgentUser(user.user.id , user.user.name)" >Delete</button>                                    
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
+            <div class="row text-center" style="padding: 10px;">
+                <div class="col"><button class="btn btn-primary btn-sm" type="button" (click)="addAgentUser()">Add New Agent</button></div>
+            </div>
+            <div class="table-responsive">
+                <table id="htmlData" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table row-border">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th class="text-center">Names</th>
+                            <th class="text-center">Email</th>
+                            <th class="text-center">Admin Agent</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let user of users">
+                            <td class="text-center">{{user.user.id}}</td>
+                            <td class="text-center">{{user.user.name}}</td>
+                            <td class="text-center">{{user.user.email}}</td>
+                            <td class="text-center">
+                                <input type="checkbox" id="vehicle1" name="vehicle1" (click)="toggleAdminUser(user.user.id)" [checked]="user.is_admin == 1">
+                            </td>
+                            <td>
+                                <button class="btn btn-danger btn-sm btn-block" type="button" (click)="deleteAgentUser(user.user.id , user.user.name)">Delete</button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
-
