--- a/src/app/pages/home/dashboard/entries-table/entries-table.component.html
+++ b/src/app/pages/home/dashboard/entries-table/entries-table.component.html
@@ -16,10 +16,10 @@
 
             <!-- <div class=" mt-2"> -->
             <div class="table-responsive">
-                <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table row-border">
+                <table id="htmlData" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table row-border">
                     <thead>
                         <tr>
-                            <th class="text-center">Id </th>
+                            <th class="text-center">Idsss </th>
                             <th class="text-center">Entry Date </th>
                             <th class="text-center">Flight Date</th>
                             <th class="text-center">First Name</th>
